# firmament-agb

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  firmament-agb.gba  tiles.tiled-project  tiles.tiled-session
gfx/: background.aseprite  background_2.aseprite  new_img.aseprite  test_set.tsx
maps/: test_map.tmx
src/: actor.rs  game_obj.rs  game_state.rs  global_data.rs  main.rs  maps.rs  player.rs  scene.rs  scene_list.rs
src/actors/: player.rs  wall.rs
src/maps/: test_map.rs
src/maps/tilesheets/: tile_sheet.rs
src/traits/: game_obj.rs
