[package]
name = "firmament-agb"
version = "0.1.0"
authors = [""]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.22.3"
agb_tracker = "0.22.3"

[build-dependencies]
quote = "1"
proc-macro2 = "1"
tiled = "0.14.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
